<resources>
    <string name="app_name">Medical History Helper</string>
    <string name="main_title">Main Menu</string>
    <string name="main_button_review">Choose User and Review Records</string>
    <string name="main_button_add">Add New User</string>
    <string name="choose_user_title">Choose User</string>
    <string name="add_user_title">Add New User</string>
    <string name="review_title">Choose User and Review Records</string>
    <string name="add_user_et_hint">Enter a Username and Save</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="button_review">Review</string>
    <string name="button_delete">X</string>
    <string name="record_title">Choose Records to Review</string>
    <string name="record_button_medication">Medications</string>
    <string name="record_button_allergy">Allergies</string>
    <string name="record_button_hospitalization">Hospitalizations</string>
    <string name="record_button_vaccination">Vaccinations</string>
    <string name="record_button_symptom">Symptoms</string>
    <string name="record_button_prenatal">Prenatal</string>
    <string name="add_med_title">Add Medication and Save</string>
    <string name="add_all_title">Add Allergy and Save</string>
    <string name="add_hos_title">Add Hospitalization and Save</string>
    <string name="add_vac_title">Add Vaccination and Save</string>
    <string name="add_sym_title">Add Symptom and Save</string>
    <string name="add_pre_title">Add Weight and Save</string>
    <string name="add_med_hint_name">Enter the medication/supplement name</string>
    <string name="add_med_hint_dose">Enter the dosage taken</string>
    <string name="add_med_hint_freq">Enter the frequency taken</string>
    <string name="add_med_hint_start">Start YYYY/MM/DD</string>
    <string name="add_med_hint_end">End YYYY/MM/DD</string>
    <string name="add_all_hint_name">Enter the allergy name</string>
    <string name="add_all_hint_area">Enter the affected area</string>
    <string name="add_all_hint_severity">Enter the severity of the reaction</string>
    <string name="add_all_hint_start">Start YYYY/MM/DD</string>
    <string name="add_all_hint_end">End YYYY/MM/DD</string>
    <string name="add_hos_hint_name">Enter a description of the hospitalization</string>
    <string name="add_hos_hint_complication">Enter a description of the complication</string>
    <string name="add_hos_hint_start">Start YYYY/MM/DD</string>
    <string name="add_hos_hint_end">End YYYY/MM/DD</string>
    <string name="add_vac_hint_name">Enter the vaccination name</string>
    <string name="add_vac_hint_booster_number">If a series of boosters, Enter the number</string>
    <string name="add_vac_hint_date">YYYY/MM/DD</string>
    <string name="add_sym_hint_name">Enter the symptom name</string>
    <string name="add_sym_hint_area">Enter the affected area</string>
    <string name="add_sym_hint_duration">Enter the duration</string>
    <string name="add_sym_hint_start">Start YYYY/MM/DD</string>
    <string name="add_sym_hint_end">End YYYY/MM/DD</string>
    <string name="add_pre_hint_weight">Enter weight</string>
    <string name="add_pre_hint_week">Enter the week of pregnancy</string>
    <string name="review_med_title">Review medications</string>
    <string name="review_all_title">Review allergies</string>
    <string name="review_hos_title">Review hospitalizations</string>
    <string name="review_vac_title">Review vaccinations</string>
    <string name="review_sym_title">Review symptoms</string>
    <string name="review_pre_title">Review prenatal</string>
    <string name="debug_delete_all">Debug X</string>
</resources>
